Corrigiendo detalles menores y terminando de verificar que todo este funcionando como deberia de funcionar.

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <title>Enviar Notificación FCM</title>
 </head>
 <body>
-  <h2>Enviar Push a un Token</h2>
+  <h2>Notificaciones push a una aplicación con Token</h2>
 
   <form id="pushForm">
     <label>Token del dispositivo:</label><br>
